# Neural-Network-Accelerator

./: .gitignore  DevLog.md  DevLog_zh.md  LICENSE  README.md  README_zh.md  parameters.v  pyproject.toml  readme_zh.md
DNN/yolov8-prune-network-slimming-main/: absort_bn.py  absort_bn_and_quant.py  finetune.py  prune.py  quant.py  results.csv  test.py  train.py  train_sparsity.py
compile/: compile_model.py  compile_utils.py  read_ddr_data.py  show_video_out.py  transcript
compile/imageprocess/: Filter.py  Resize.py  model.py
compile/yolov8/: Yolov8.py  bitmap_output.c  internet.py  lettercode.py  transcript
fig/: ~$$系统框图.~vsdx  系统框图.vsdx
fig/PPT论文图/: 论文总图.pptx  长版.pptx
ipcore/simulation/: Ram_based_fifo.v  Ram_based_fifo_tb.v  Syn_fifo.sv  ip_path.do  pre.v  simulation_ram.v
script/: check_model_correct.py  compile_model.py  compile_utils.py  order_code.txt  read_ddr_data.py
sim/: add_wave.do  refresh.bat  refresh.do  sim.bat  sim.do  transcript  vsim.wlf  wlft43jz1m  wlft4w3h78  wlftmi3tdf
sim/tb/: arbitr_simulation_tb.v  axi_interconnect_warp.v  axi_interface.sv  axi_lite_BFM.sv  axi_master.v  make_order.sv  refresh_ddr_data.v  simulation_AXI_memory.v  simulation_AXI_memory_virtual.v  simulation_mul.v  simulation_order_tb.v  simulation_row_cache.v  simulation_tb.v  test_axi_tb.v
sim/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl  _lib1_48.qdb  _lib1_48.qpg  _lib1_48.qtl  _lib1_5.qdb  _lib1_5.qpg  _lib1_5.qtl
source/: accelerator_control.v  video_stream_out.v
source/conv_component/: MAC_PE.v  Output_buffer.v  PE_array.v  PE_core.v  (+13 more)
(+90 files in other folders)
